EATON-395: bugfix, added space to icons in mobile / fixed some problems with the buttons on tablet

--- a/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
+++ b/eaton.frontend/src/shared/module-faceted-navigation/css/_faceted-nav-header.scss
@@ -115,6 +115,7 @@
   a.open-facets-mobile {
     width: 100%;
     text-align: center;
+    max-width: unset;
   }
 
   .faceted-navigation-filters {
